style, validalas, reszponzivitas

--- a/ÁBRAHÁM_LEILA_GAMER/index.html
+++ b/ÁBRAHÁM_LEILA_GAMER/index.html
@@ -7,32 +7,52 @@
     <meta name="description" content="Játékok ismertetője, leírása." />
     <meta name="keywords" content="Játék, witcher" />
     <meta name="author" content="Ábrahám Leila" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="stilus.css" />
     <title>Ábrahám Leila</title>
   </head>
   <body>
     <main>
-      <header>hesd</header>
-      <nav>
+      <header></header>
+      <nav id="menu">
         <ul>
           <li><a href="index.html">Főoldal</a></li>
-          <li><a href="#">Regisztráció</a></li>
+          <li><a href="tablazatok.html">Regisztráció</a></li>
         </ul>
       </nav>
+      <aside>
+        <div>
+          <img
+            src="kepek/witcher.jpg"
+            alt="Witcher filmes borító"
+            class="kep"
+          />
+        </div>
+      </aside>
       <article>
-        <h1>Bevezetés</h1>
+        <h1 class="cim">Bevezetés</h1>
         <p>
           Az oldal játékokat mutat be és leírásokat ad a jelenlegi updatekről, a
           jövőbeli frissítésekről, a játékok tartalmairól, karaktereiről, vagy
-          éppen fegyvereiről a játékmenethez.</p>
-          <ul>
-            <li>A witcher 4 készülőben van</li>
-            <li>GTA 7 modok megjelentek</li>
-            <li>Egy Kóreai játékos kijátszotta a League of Legendset</li>
-            <li>Sylvanas Elpusztult Gorran a új warchief és Zerodemon az Új Lich King által</li>
-            <li>A Mókusok jobb gamerek mint a Lengyelek és a Csehek?</li>
-            <li>A káromkodás erősebbé teszi a karaktereidet!!!</li>
-          </ul>
+          éppen fegyvereiről a játékmenethez.
+        </p>
+        <ul id="info">
+          <li>A witcher 4 készülőben van</li>
+          <li>GTA 7 modok megjelentek</li>
+          <li>Egy Kóreai játékos kijátszotta a League of Legendset</li>
+          <li>
+            Sylvanas Elpusztult Gorran a új warchief és Zerodemon az Új Lich
+            King által
+          </li>
+          <li>A Mókusok jobb gamerek mint a Lengyelek és a Csehek?</li>
+          <li>A káromkodás erősebbé teszi a karaktereidet!!!</li>
+        </ul>
       </article>
       <footer>&copy; Minden jog fenntartva!</footer>
     </main>
